# tex2web

./: CMakeLists.txt  COPYING  LICENSE  Makefile  Makefile.raw  README.md  tex2web.c
example/: hello.tex  macro.tex  table.tex  toc.tex
src/: CMakeLists.txt  tex2web.c
test/: gen.sh
test/expect/: hello.html  macro.html  style.css  table.html  toc.html
